--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                   <img
                     src="https://media.istockphoto.com/id/1197070890/nl/foto/portret-van-een-slimme-en-knappe-it-specialist-die-glazen-draagt-glimlacht-bij-de-camera-op-de.jpg?s=612x612&w=0&k=20&c=jKj5QTa2kzMjpKRcA39bx-6gmjnrfSzHvlqm_aP1sNU="
                     class="chef-imag"
-
+                    height="349"
                     alt=""
                   />
                   <div class="wave-divider">
