--- a/index.html
+++ b/index.html
@@ -901,6 +901,7 @@
                   <img
                     src="https://media.istockphoto.com/id/2100297656/nl/foto/tensed-coder-solving-problem-in-dark-datacenter-closeup-tired-man-working-late.jpg?s=612x612&w=0&k=20&c=pT3SlufhlMfqs28rUNLm2syr-B4hCrM3iNlx1Ls__IM="
                     class="chef-imag"
+                    height="350px !important"
                     alt=""
                   />
                   <div class="wave-divider">
@@ -1271,22 +1272,22 @@
               <a
                 class="d-flex justify-content-center align-items-center"
                 href=""
-                ><i class="bi bi-twitter-x"></i
+                ><i class="bi bi-twitter-x text-primary"></i
               ></a>
               <a
                 class="d-flex justify-content-center align-items-center"
                 href=""
-                ><i class="bi bi-facebook"></i
+                ><i class="bi bi-facebook text-primary"></i
               ></a>
               <a
                 class="d-flex justify-content-center align-items-center"
                 href=""
-                ><i class="bi bi-instagram"></i
+                ><i class="bi bi-instagram text-primary"></i
               ></a>
               <a
                 class="d-flex justify-content-center align-items-center"
                 href=""
-                ><i class="bi bi-linkedin"></i
+                ><i class="bi bi-linkedin text-primary"></i
               ></a>
             </div>
           </div>
@@ -1403,6 +1404,6 @@
       window.initMap = initMap;
     </script>
 
-    <script type="module" src="./assets/js/main.js"></script>
+    
   </body>
 </html>
